@@ -1,6 +1,7 @@
 
 2.0.11 released
 
+	* use stricter rules for what filenames are valid on Android
 	* fix applying IP filter to DHT traffic (HanabishiRecca)
 	* fix race condition when cancelling requests after becoming a seed
 	* fix performance bug in the file pool, evicting MRU instead of LRU (HanabishiRecca)
